Added APDU exchanges through API
