# api/swagger.yaml
@@ -8,6 +8,25 @@ servers:
   - url: "http://127.0.0.1:5000"
 
 paths:
+  /apdu:
+    post:
+      summary: "Transmit APDU and return device response"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Apdu'
+            example: {"data": "e0c0000004"}
+      responses:
+        "200":
+           description: "Device response to the APDU command"
+           content:
+             application/json:
+               schema:
+                 $ref: '#/components/schemas/Apdu'
+               example: {"data": "105e441f9000"}
+
   /automation:
     post:
       summary: "Updates the automation rules"
@@ -118,6 +137,15 @@ paths:
                 format: binary
 components:
   schemas:
+    Apdu:
+      type: object
+      properties:
+        data:
+          description: APDU data, in hexadecimal.
+          type: string
+          pattern: '^([0-9a-fA-F]{2})+$'
+      required:
+        - data
     Button:
       type: object
       properties:
